=== HEAD

* Support the jdbc-hsqldb gem in the jdbc adapter, since it has been updated to 2.2.9 (jeremyevans)

* Work with new jdbc-* gems that require manual driver loading (kares) (#598)

* Cast blobs correctly on DB2 when use_clob_as_blob is false (mluu, jeremyevans) (#594)

* Add date_arithmetic extension for database-independent date calculations (jeremyevans)

* Make Database#schema handle [host.]database.schema.table qualified tables on Microsoft SQL Server (jeremyevans)

* Add Dataset#split_qualifiers helper method for splitting a qualifier identifier into array of strings (jeremyevans)

* Make Database#schema_and_table always return strings for the schema and table (jeremyevans)

* Skip stripping of blob columns in the string_stripper plugin (jeremyevans) (#593)

* Allow Database#get to take an array to return multiple values, similar to map/select_map (jeremyevans)

* Default :prefetch_rows to 100 in the Oracle adapter (andrewhr) (#592)

=== 3.42.0 (2012-12-03)

* If an exception occurs while committing a transaction, attempt to rollback (jeremyevans)

* Support setting default string column sizes on a per-Database basis via default_string_column_size (jeremyevans)

* Reset Model.instance_dataset when extending the model's dataset (jeremyevans)

* Make the force_encoding plugin work with frozen strings (jeremyevans)

* Add Database#do on PostgreSQL for using the DO anonymous code block execution statement (jeremyevans)

* Remove Model.dataset_methods (jeremyevans)

* Allow subset to be called inside a dataset_module block (jeremyevans)

* Make Dataset#avg, #interval, #min, #max, #range, and #sum accept virtual row blocks (jeremyevans)

* Make Dataset#count use a subselect when the dataset has an offset without a limit (jeremyevans) (#587)

* Dump deferrable status of unique indexes on PostgreSQL (radford) (#583)

* Extend deferrable constraint support to all types of constraints, not just foreign keys (radford, jeremyevans) (#583)
