@@ -19,7 +19,7 @@ module Sequel
 
         # Consider tinyint(1) columns as boolean.
         def schema_column_type(db_type)
-          db_type == 'tinyint(1)' ? :boolean : super
+          db_type =~ /\Atinyint\(1\)/ ? :boolean : super
         end
       
         # Apply the connectiong setting SQLs for every new connection.
